--- a/css/marketK_footer.css
+++ b/css/marketK_footer.css
@@ -1,11 +1,13 @@
 footer{
     width: 1527px;
     margin: 0 auto;
+
 }
 .ft_outer1{
     height: 300px;
     display: flex;
-    margin: 0 auto;            
+    margin-left: 100px;    
+
 }
 .ft_med1{
     width: 50%;
@@ -100,4 +102,44 @@ footer{
     font-size: 10px;
     padding: 20px 0px 30px;
     color: #9999;
+}
+
+.modal {
+    display: none; /* 기본 숨김 */
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background: rgba(0,0,0,0.5);
+    justify-content: center;
+    align-items: center;
+}
+
+.modal.active {
+    display: flex;
+}
+
+.modal_content {
+    background: white;
+    padding-top: 20px;
+    padding-bottom: 30px;
+    width: 400px;
+    height: 100px;
+    border-radius: 10px;
+    position: relative;
+    text-align: center;
+    line-height: 20px;
+}
+
+.closeBtn {
+    position: absolute;
+    bottom: 5px;
+    right: 50%;
+    border: none;
+    background: none;
+    margin-top: 30px;
+    font-size: 15px;
+    color: var(--sub-purple);
+    cursor: pointer;
 }
