--- a/css/marketK_header.css
+++ b/css/marketK_header.css
@@ -153,12 +153,12 @@
             color: var(--main-purple);
          }
 
-
         .subcategory{
             display: none;
-            position: fixed;
-            top: 167px;
-            left:190px;
+            position: absolute;
+            top: 0;
+            left: 100%;
+            background: white;
             width: 180px;
             margin-top: 10px;
             margin-bottom: 10px;
