--- a/css/main.css
+++ b/css/main.css
@@ -1,28 +1,29 @@
 .mainHeader {
-    width: 1900px;
-    height: 370px;
-    margin: 0 auto;
-    overflow: hidden;
-    position: relative;
+  width: 1900px;
+  height: 370px;
+  margin: 0 auto;
+  overflow: hidden;
+  position: relative;
 }
 .container {
-    display: flex;
+  display: flex;
 }
 .main img {
-    width: 1900px;
-    height: 370px;
-    display: block;
+  width: 1900px;
+  height: 370px;
+  display: block;
 }
-.section1, .section2{
+.section1,
+.section2 {
   width: 1050px;
   height: 704px;
   /* border: 2px solid black; */
   margin: 0 auto;
 }
-.section1{
+.section1 {
   padding-top: 30px;
 }
-.section2{
+.section2 {
   margin-top: 110px;
 }
 .text {
@@ -31,10 +32,10 @@
   justify-content: center;
   align-items: center;
 }
-.text img{
+.text img {
   height: 30px;
   width: auto;
-  margin-top:2px ;
+  margin-top: 2px;
 }
 .title {
   /* width: 1050px; */
@@ -47,7 +48,7 @@
   text-align: center;
   margin: 100px 0px 20px 0;
 }
-.title:hover{
+.title:hover {
   cursor: pointer;
 }
 .subTitle {
@@ -59,20 +60,23 @@
   margin-bottom: 40px;
 }
 .detail {
-  position: relative; 
+  position: relative;
   width: 1050px;
   margin: 0 auto;
 }
-.slide-window { /* 상품들이 지나가는 통로 */
+.slide-window {
+  /* 상품들이 지나가는 통로 */
   width: 100%;
-  overflow: hidden; 
+  overflow: hidden;
 }
-.slide-list { /* 실제로 움직이는 기차 역할 */
+.slide-list {
+  /* 실제로 움직이는 기차 역할 */
   display: flex;
-  gap: 18px; 
-  transition: transform 0.5s ease-in-out; 
+  gap: 18px;
+  transition: transform 0.5s ease-in-out;
 }
-.backButton, .nextButton {
+.backButton,
+.nextButton {
   position: absolute;
   top: 160px; /* 상품 이미지 중앙 높이 */
   width: 40px;
@@ -85,34 +89,45 @@
   align-items: center;
   cursor: pointer;
   z-index: 20;
-  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   position: absolute;
   top: 160px; /* .img의 높이가 320px이므로 절반인 160px 설정 */
 }
-.backButton { 
-  left: -20px; 
-} 
-.nextButton { 
-  right: -20px; 
-} 
-.backButton:hover, .nextButton:hover {
+.backButton {
+  left: -20px;
+}
+.nextButton {
+  right: -20px;
+}
+.backButton:hover,
+.nextButton:hover {
   background-color: #f8f8f8;
 }
 /* 버튼 안에 화살표 아이콘을 넣는 간단한 방법 */
-.backButton::after { content: '❮'; font-size: 18px; color: #333; }
-.nextButton::after { content: '❯'; font-size: 18px; color: #333; }
+.backButton::after {
+  content: "❮";
+  font-size: 18px;
+  color: #333;
+}
+.nextButton::after {
+  content: "❯";
+  font-size: 18px;
+  color: #333;
+}
 
-[class^="box"]{ /* class명이 box로 시작하는 class 다 불러오기*/
+[class^="box"] {
+  /* class명이 box로 시작하는 class 다 불러오기*/
   cursor: pointer;
 }
-[class^="box"] .img:hover{
+[class^="box"] .img:hover {
   background-size: 105%;
 }
-[class^="coupon"], .max{
+[class^="coupon"],
+.max {
   pointer-events: none; /* 마우스 이벤트가 아래 배경으로 통과하게 */
   z-index: 10;
 }
-.cart{
+.cart {
   width: 249px;
   height: 35px;
   border: 1px solid lightgray;
@@ -129,7 +144,7 @@
   line-height: 20px;
 }
 .originPrice {
-  margin:20px 0;
+  margin: 20px 0;
   /* border: 1px solid red; */
   color: #999999;
 }
@@ -149,30 +164,38 @@
 .review {
   color: #999999;
 }
-.box1 .img, .box2 .img,
-.box3 .img, .box4 .img,
-.box5 .img, .box6 .img,
-.box7 .img, .box8 .img,
-.boxA .img, .boxB .img,
-.boxC .img, .boxD .img,
-.boxE .img, .boxF .img,
-.boxG .img, .boxH .img{
+.box1 .img,
+.box2 .img,
+.box3 .img,
+.box4 .img,
+.box5 .img,
+.box6 .img,
+.box7 .img,
+.box8 .img,
+.boxA .img,
+.boxB .img,
+.boxC .img,
+.boxD .img,
+.boxE .img,
+.boxF .img,
+.boxG .img,
+.boxH .img {
   background-position: center;
   width: 249px;
   height: 319px;
   position: relative;
   overflow: hidden;
   background-size: 100%; /*처음상태 꽉 차게*/
-  transition: background-size 0.3s ease;;
+  transition: background-size 0.3s ease;
 }
-[class^="coupon"]{
+[class^="coupon"] {
   position: absolute;
   top: 10px;
   left: 10px;
   width: auto;
   height: 30px;
   padding: 5px 10px;
-  background-color: #BD76FF;
+  background-color: #bd76ff;
   border-radius: 5px;
   display: flex;
   justify-content: center;
@@ -181,166 +204,165 @@
   font-weight: bolder;
 }
 .box1 .img {
-  background-image: url(../images/main01.jpg) ;
+  background-image: url(../images/main01.jpg);
 }
 .box2 .img {
-  background-image: url(../images/main02.jpg) ;
+  background-image: url(../images/main02.jpg);
 }
-.max{
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 36px;
-    /* border: 1px solid red; */
-    color: #f8f8f8;
-    background-color: gray;
-    border-radius: 0 0 5px 5px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.max {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 36px;
+  /* border: 1px solid red; */
+  color: #f8f8f8;
+  background-color: gray;
+  border-radius: 0 0 5px 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.max p{
+.max p {
   font-size: 15px;
   font-weight: bold;
   margin: 0;
 }
 .box3 .img {
-  background-image: url(../images/main03.jpg) ;
+  background-image: url(../images/main03.jpg);
 }
 .box4 .img {
-  background-image: url(../images/main04.jpg) ;
+  background-image: url(../images/main04.jpg);
 }
 .box5 .img {
-  background-image: url(../images/main05.jpg) ;
+  background-image: url(../images/main05.jpg);
 }
 .box6 .img {
-  background-image: url(../images/main06.jpeg) ;
+  background-image: url(../images/main06.jpeg);
 }
 .box7 .img {
-  background-image: url(../images/main07.jpg) ;
+  background-image: url(../images/main07.jpg);
 }
 .box8 .img {
-  background-image: url(../images/main08.jpeg) ;
+  background-image: url(../images/main08.jpeg);
 }
 .boxA .img {
-  background-image: url(../images/mainA.jpg) ;
+  background-image: url(../images/mainA.jpg);
 }
 .boxB .img {
-  background-image: url(../images/mainB.jpg) ;
+  background-image: url(../images/mainB.jpg);
 }
 .boxC .img {
-  background-image: url(../images/mainC.jpg) ;
+  background-image: url(../images/mainC.jpg);
 }
 .boxD .img {
-  background-image: url(../images/mainD.jpg) ;
+  background-image: url(../images/mainD.jpg);
 }
 .boxE .img {
-  background-image: url(../images/mainE.jpg) ;
+  background-image: url(../images/mainE.jpg);
 }
 .boxF .img {
-  background-image: url(../images/mainF.jpg) ;
+  background-image: url(../images/mainF.jpg);
 }
 .boxG .img {
-  background-image: url(../images/mainG.jpg) ;
+  background-image: url(../images/mainG.jpg);
 }
 .boxH .img {
-  background-image: url(../images/mainH.jpg) ;
+  background-image: url(../images/mainH.jpg);
 }
-.section3{
-    width: 100%;
-    height: 409px;
-    background-color: rgb(244, 244, 244);
-    margin-top: 100px;
+.section3 {
+  width: 100%;
+  height: 409px;
+  background-color: rgb(244, 244, 244);
+  margin-top: 100px;
 }
 .brand {
-    display: flex;          
-    justify-content: center; 
-    align-items: center;    
-    gap: 10px;              
-    padding: 30px 0;        
-    margin-bottom: 30px;    
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  padding: 30px 0;
+  margin-bottom: 30px;
 }
 .brandTitle {
-    font-size: 30px;
-    font-weight: bolder;
+  font-size: 30px;
+  font-weight: bolder;
 }
 .brand img {
-    height: 30px;          
-    width: auto; 
-    margin-top:2px;           
+  height: 30px;
+  width: auto;
+  margin-top: 2px;
 }
-.pic{
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    gap: 20px;
-    /* border: 1px solid red; */
+.pic {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  gap: 20px;
+  /* border: 1px solid red; */
 }
-.pic a{
-    text-decoration: none;
-    color: #333;
-    font-size: 15px;
-    font-weight: 400;
-    display: inline-block;
-    padding-top: 10px;
+.pic a {
+  text-decoration: none;
+  color: #333;
+  font-size: 15px;
+  font-weight: 400;
+  display: inline-block;
+  padding-top: 10px;
 }
-.round1Img{
-    background-image: url(../images/설화수.jpg);
-    background-position: center;
-    background-size: cover;
-    border-radius: 50%;
-    width: 129px;
-    height: 129px;
-    opacity: 0.4;
+.round1Img {
+  background-image: url(../images/설화수.jpg);
+  background-position: center;
+  background-size: cover;
+  border-radius: 50%;
+  width: 129px;
+  height: 129px;
+  opacity: 0.4;
 }
-.round2Img{
-    background-image: url(../images/시슬리.jpeg);
-    background-position: center;
-    background-size: cover;
-    border-radius: 50%;
-    width: 129px;
-    height: 129px;
-    opacity: 0.4;
+.round2Img {
+  background-image: url(../images/시슬리.jpeg);
+  background-position: center;
+  background-size: cover;
+  border-radius: 50%;
+  width: 129px;
+  height: 129px;
+  opacity: 0.4;
 }
-.round3Img{
-    background-image: url(../images/랑콤.jpg);
-    background-position: center;
-    background-size: cover;
-    border-radius: 50%;
-    width: 129px;
-    height: 129px;
-    opacity: 0.4;
+.round3Img {
+  background-image: url(../images/랑콤.jpg);
+  background-position: center;
+  background-size: cover;
+  border-radius: 50%;
+  width: 129px;
+  height: 129px;
+  opacity: 0.4;
 }
-.round4Img{
-    background-image: url(../images/스킨수티컬즈.jpg);
-    background-position: center;
-    background-size: cover;
-    border-radius: 50%;
-    width: 129px;
-    height: 129px;
-    opacity: 0.4;
+.round4Img {
+  background-image: url(../images/스킨수티컬즈.jpg);
+  background-position: center;
+  background-size: cover;
+  border-radius: 50%;
+  width: 129px;
+  height: 129px;
+  opacity: 0.4;
 }
-.round5Img{
-    background-image: url(../images/키엘.jpg);
-    background-position: center;
-    background-size: cover;
-    border-radius: 50%;
-    width: 129px;
-    height: 129px;
-    opacity: 0.4;
+.round5Img {
+  background-image: url(../images/키엘.jpg);
+  background-position: center;
+  background-size: cover;
+  border-radius: 50%;
+  width: 129px;
+  height: 129px;
+  opacity: 0.4;
 }
-.round6Img{
-    background-image: url(../images/조말론런던.avif);
-    background-position: center;
-    background-size: cover;
-    border-radius: 50%;
-    width: 129px;
-    height: 129px;
-    opacity: 0.4;
+.round6Img {
+  background-image: url(../images/조말론런던.avif);
+  background-position: center;
+  background-size: cover;
+  border-radius: 50%;
+  width: 129px;
+  height: 129px;
+  opacity: 0.4;
 }
-[class^=round]:hover{
-   opacity: 1; 
-   transform: scale(1.02);
-   transition: transform 0.2s ease;
-  }
-
+[class^="round"]:hover {
+  opacity: 1;
+  transform: scale(1.02);
+  transition: transform 0.2s ease;
+}
