스일작업 1. 각 페이지간의 연결고리 만듬 2. 로그인하면 로그인 상태 표시 및 로그아웃 3. 전체적인 디자인 수정 4. 회원가입에 주소넣는 기능 추가

--- a/css/brand.css
+++ b/css/brand.css
@@ -3,6 +3,7 @@
     /* height: 200px; */
     /* border: 1px solid black; */
     margin: 0 auto;
+    /* padding-top: 45px; */
 }
 .wrap-img{
     width: 1050px;
